Java deprectates new Integer(Value) in favor of Integer.valueOf(Value), etc.